--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- Link para a folha de estilos -->
     <link rel="stylesheet" href="assets\stylesheet.css">
+    <link rel="shortcut icon" href="assets\card-checklist.svg" type="image/x-icon">
     
     <!-- Título da página -->
     <title>To Do List</title>
