--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <!-- Caixa de entrada de tarefas -->
         <div id="input-box">
             <!-- Input para inserir novas tarefas -->
-            <input type="text" name="" id="myTask" placeholder="Adicione sua tarefa!"></input>
+            <input type="text" id="myTask" placeholder="Adicione sua tarefa!" maxlength="100" autofocus></input>
             
             <!-- Botão para adicionar nova tarefa -->
-            <button onclick="creatNewTask()">+</button>
+            <button id="addBtn">+</button>
         </div>
         
         <!-- Lista de tarefas -->
